prod_snapshot_2015-09-24_1030/objects/Dig_Aud_Prop__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Audit_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Media Properties</relationshipLabel>
        <relationshipName>Dig_Audit_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Audit</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Audit_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dig Audit Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>Digital_Audit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Audit Property Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dig Audit Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>